--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -124,12 +124,12 @@
 <body>
     <!-- Main Content -->
     <div class="container">
-        <div class="team-spy">Team SPY</div>
+        <div class="team-spy">Team NEXUZ</div>
         <div class="bot-status">⚡ Bot is Live ⚡</div>
 
         <div class="actions">
-            <a href="https://t.me/team_spy_pro" class="btn">Join Us</a>
-            <a href="https://github.com/devgaganin" class="btn">GitHub</a>
+            <a href="https://t.me/joinnexuz" class="btn">Join Us</a>
+            <a href="https://t.m/NEXUZ_ELITE_BOT" class="btn">CONTACT HERE</a>
         </div>
     </div>
 </body>
